--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Digital Marketing Agency</title>
+    <title>Digital Marketing Platefrom</title>
     <!-- Bootstrap CDN -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css">
     <!-- Custom CSS -->
@@ -235,6 +235,98 @@
                 font-size: 1.2rem;
             }
         }
+
+        :root {
+    --primary-color: #007bff;
+    --secondary-color: #6c757d;
+    --light-color: #f8f9fa;
+    --dark-color: #343a40;
+  }
+
+  /* Contact Section */
+  .contact {
+    padding: 4rem 0;
+  }
+
+  .contact h2 {
+    text-align: center;
+    font-size: 2.5rem;
+    margin-bottom: 2rem;
+  }
+
+  .contact .form-group {
+    margin-bottom: 1rem;
+  }
+
+  .contact label {
+    display: block;
+    font-size: 1.2rem;
+    margin-bottom: 0.5rem;
+  }
+
+  .contact input, .contact textarea {
+    width: 100%;
+    padding: 0.8rem;
+    border: 1px solid var(--secondary-color);
+    border-radius: 0;
+  }
+
+  .contact input:focus, .contact textarea:focus {
+    outline: none;
+    border-color: var(--primary-color);
+  }
+
+  .contact .btn {
+    display: block;
+    width: 100%;
+    background-color: var(--primary-color);
+    color: var(--light-color);
+    font-size: 1.2rem;
+    padding: 0.8rem 1.5rem;
+    border: none;
+    border-radius: 0;
+    cursor: pointer;
+  }
+
+  .contact .btn:hover {
+    background-color: var(--secondary-color);
+    color: var(--light-color);
+  }
+
+  /* Responsive */
+  @media (max-width: 768px) {
+    .contact .form-group {
+      width: 100%;
+    }
+  }
+
+
+
+  /* Variables */
+  :root {
+    --primary-color: #007bff;
+    --secondary-color: #6c757d;
+    --light-color: #f8f9fa;
+    --dark-color: #343a40;
+  }
+
+  /* Paragraph about digital marketing */
+  .digital-marketing {
+    padding: 2rem;
+  }
+
+  .digital-marketing h3 {
+    color: var(--primary-color);
+    font-size: 1.8rem;
+    margin-bottom: 1rem;
+  }
+
+  .digital-marketing p {
+    color: var(--dark-color);
+    font-size: 1.2rem;
+    line-height: 1.5;
+  }
+
     </style>
 </head>
 <body>
@@ -250,18 +342,7 @@
                     <li class="nav-item active">
                         <a class="nav-link" href="#banner">Home</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#services">Services</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#process">Process</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#testimonials">Testimonials</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#contact">Contact</a>
-                    </li>
+                    
                 </ul>
             </div>
         </div>
@@ -279,7 +360,7 @@
         </div>
     </section>
     <!-- Services -->
-    <section id="services" class="services">
+    <!-- <section id="services" class="services">
         <div class="container">
             <h2>Our Services</h2>
             <div class="row">
@@ -294,7 +375,52 @@
                 </div>
             </div>
         </div> 
-    </section>            
+    </section>    -->
+    <div class="digital-marketing">
+        <h3>What is digital marketing?</h3>
+        <p>Digital marketing is a form of marketing that uses the internet and digital technologies to connect with potential customers. It involves various strategies and channels, such as search engine optimization, social media marketing, email marketing, web design, and online advertising. Digital marketing helps businesses reach and engage their target audience, increase brand awareness, generate leads, and drive sales. Digital marketing is also data-driven, meaning marketers can measure and optimize their campaigns based on real-time feedback and analytics.</p>
+      </div>
 
+      <div class="digital-marketing">
+        <h3>Some examples of successful digital marketing campaigns are:</h3>
+
+
+<p>Airbnb’s “Made Possible by Hosts” campaign, which used user-generated content (UGC) to showcase the unique experiences and stories of Airbnb hosts and guests1.
+UNIQLO’s “Uncover” campaign, which used interactive online quizzes and personalized recommendations to increase customer loyalty and sales2.
+American Express’s “OPEN Forum” campaign, which created a valuable online resource and community for small business owners, featuring expert advice, insights, and networking opportunities3.
+Slack’s word-of-mouth marketing campaign, which leveraged customer testimonials, referrals, and social proof to grow its user base and brand reputation4.
+Dove’s “Project #ShowUs” campaign, which aimed to challenge beauty stereotypes and celebrate diversity by creating the world’s largest stock photo library of women, by women5.
+These are just some of the many examples of digital marketing campaigns that have achieved remarkable results and inspired others. If you want to learn more about how to create and execute 
+
+</p>
+      </div>
+    <section id="contact" class="contact">
+        <div class="container">
+          <h2>Contact Us</h2>
+          <form action="/action_page.php">
+            <div class="form-group">
+              <label for="name">Name</label>
+              <input type="text" id="name" name="name" placeholder="Your name" required>
+            </div>
+            <div class="form-group">
+              <label for="email">Email</label>
+              <input type="email" id="email" name="email" placeholder="Your email" required>
+            </div>
+            <div class="form-group">
+              <label for="subject">Subject</label>
+              <input type="text" id="subject" name="subject" placeholder="Your subject" required>
+            </div>
+            <div class="form-group">
+              <label for="message">Message</label>
+              <textarea id="message" name="message" placeholder="Your message" rows="4" required></textarea>
+            </div>
+            <div class="form-group">
+              <button type="submit" class="btn">Send</button>
+            </div>
+          </form>
+        </div>
+      </section> 
+
+    
     </body>
     </html>
