--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
     <!-- Header -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="#">Digital Marketing platform</a>
+            <a class="navbar-brand" href="#">Digital SEO platform</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
